assets/css/style.css
/*------------Imported Fonts-----*/
@import url('https://fonts.googleapis.com/css2?family=Arimo&family=Mulish:wght@222&family=Roboto+Condensed&family=Roboto+Mono:wght@307;314&family=Roboto:wght@400;500;700&display=swap');

header {
    background-color: rgba(155, 157, 168, 0.82);
    padding: 30px;
}

.logo {
    float: left;

    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    font-weight: normal;
    font-size: 48px;
    line-height: 45px;

    color: rgba(10, 8, 8, 0.63);
}

.menu {
    font-size: 120%;
    list-style-type: none;
    letter-spacing: 4px;
    width: auto;
    position: relative;
}

.logo .menu {
    line-height: 50px;
    background-color: aquamarine;
    margin-top: 30px;
}

.menu li {
    float: right;
    margin-right: 30px;
}

.menu a {
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    color: rgba(10, 8, 8, 0.63);
}



.menu a:hover {
    border-bottom: 1px solid #131010;
  }

.hero-pic {
    height: 1000px;
    width: 100%;
    background-image: url(/assets/images/amaliasofa.png);
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-text h1 {
    font-family: "Roboto Condensed", sans-serif;
    font-style: normal;
    font-size: 1500%;
    text-transform: uppercase;
    position: absolute;
    left: 160px;
    top: 360px;

    color: rgba(255, 255, 255, 0.73);
}

.hero-text h3 {
    font-family: "Roboto Condensed", sans-serif;
    font-style: normal;
    font-size: 600%;
    text-transform: capitalize;
    position: absolute;
    left: 370px;
    top: 600px;

    color: rgba(255, 255, 255, 0.73);
}

.intro-section {
    height: 450px;
}

#intro {
    text-align: center;
    text-transform: uppercase;
    font-family: "Roboto", sans-serif;
    font-size: 250%;
    margin-top: 20px;

    color: rgba(0, 0, 0, 0.70);
}

.intro-all {
    width: 90%;
}

.intro-all h3 {
    font-family: "Roboto Condensed", sans-serif;
    text-transform: uppercase;
    text-align: center;
}

.intro-left {
    float: left;
    text-align: center;
    margin-top: 35px;
    margin-left: 15px;
    width: 33%;
}

.intro-middle {
    position: absolute;
    left: 450px;
    top: 1180px;
    margin-top: 35px;
    margin-left: 20px;
    text-align: center;
    width: 33%;
}

.intro-right {
    position: absolute;
    text-align: center;
    left: 925px;
    top: 1180px;
    margin-top: 35px;
    margin-left: 33px;
    width: 33%;
}

#underline-intro-title {
    width: 60%;
    border-top: 4px solid #b15151;
}

#underline-intro-text {
    width: 20%;
    border-top: 1px solid #b15151;
}

.upcoming-events-section {
    background-image: url(/assets/images/amalia-laying.png);
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 700px;
    overflow: hidden;
}

.upcoming-events-section h2 {
    color: rgba(0, 0, 0, 0.70);
    font-family: "Roboto", sans-serif;
    font-size: 250%;
    text-transform: uppercase;
    text-align: center;
    margin-top: 8px;
}

#underline-events-title {
    width: 30%;
    border-top: 4px solid #b15151;
}

